2006-05-30  Werner Koch  <wk@g10code.com>

	* website/mk-chksums: New.

	* manual-de/durchblicker.tex (subsubsection{Zusammenfassung}):
	Fixed c+p bug in the long prime.  Thanks to Ernst-Günter Giessmann
	for reporting this.

2006-04-26  Werner Koch  <wk@g10code.com>

	* README.en.txt (Content): New.

2006-04-25  Werner Koch  <wk@g10code.com>

	* manual-de/was-ist-gpg4win.tex: Make URL a link

	* manual-de/Makefile.am (einsteiger.dvi): Depend on version.tex
	(durchblicker.dvi): Ditto.
	(einsteiger.html, durchblicker.html): Ditto.

	* manual-de/version.tex.in: Define more version numbers.
	* manual-de/macros.tex: Include version.tex 
	* manual-de/durchblicker.tex: Take version numbers from macros.tex/
	* manual-de/einsteiger.tex: Ditto.
	(section{Sie installieren Gpg4win}): Add some Text.

2006-04-24  Marcus Brinkmann  <marcus@g10code.de>

	* (manual-de/durchblicker.tex, manual-de/einsteiger.tex): Use
	package times instead of palatino.

	* (manual-de/durchblicker.tex, manual-de/einsteiger.tex): Use
	package palatino and fontenc.

2006-04-19  Werner Koch  <wk@g10code.com>

	* README.de.txt (Inhalt): Added TOC etc.

2006-04-12  Werner Koch  <wk@g10code.com>

	* manual-de/einsteiger.tex (GPGol): List limitations early.

2006-04-05  Werner Koch  <wk@g10code.com>

	* website/buildhtml.mk (change-history.htm4): Don't use recode. A
	simple recode to latin1 won't anyway work with all source
	encodings and thus we stay with latin1 for the NEWS file for now.

	* website/build-history.awk: Register encoding.

	* manual-de/einsteiger.tex (Appendix A): Describe Prefer HTML
	Version.
	* manual-de/sc-gpgol-options.png: Updated.

2006-04-04  Werner Koch  <wk@g10code.com>

	* manual-de/einsteiger.tex: Use consistent capitalization "Gpg4win". 
	* manual-de/durchblicker.tex: Ditto.

	* manual-de/einsteiger.tex (Umstieg von anderen GnuPG Programmen):
	New.

	* website/build-history.awk: New.

2006-03-31  Werner Koch  <wk@g10code.com>
