@@ -21,6 +21,40 @@ m4_dnl DONT USE THIS FILE DIRECTLY
   </p>
 </div>
 <div class="box">
+  <h1>Sponsoring</h1>
+
+  Ist Gpg4win hilfreich?
+
+  <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+    <font size="-2">
+      <input type="hidden" name="cmd" value="_xclick">
+      <input type="hidden" name="business" value="paypal@intevation.de">
+      <input type="hidden" name="undefined_quantity" value="1">
+      <input type="hidden" name="item_name" value="Gpg4win">
+      <input type="hidden" name="item_number" value="1010">
+      <input type="hidden" name="no_shipping" value="1">
+      <input type="hidden" name="tax" value="0.16">
+      <input type="hidden" name="cn" value="Kommentar (Lob/Kritik)">
+
+      <p>
+      <input type="hidden" name="on0" value="Nennen erlaubt?">Nennen erlaubt?
+      <input type="radio" name="os0" value="Ja">Ja
+      <input type="radio" name="os0" value="Nein" checked>Nein
+      </p>
+
+      <input type="hidden" name="currency_code" value="EUR">
+      <input type="hidden" name="bn" value="PP-BuyNowBF">
+
+      <p align="center">
+      <input type="image" src="https://www.paypal.com/de_DE/i/btn/x-click-but02.gif"
+        border="0" name="submit" alt="Zahlen mit PayPal">
+      </p>
+    </font>
+  </form>
+
+  </p>
+</div>
+<div class="box">
   <h1>Mitmachen</h1>
   <a href="http://wald.intevation.org/projects/gpg4win/">Projektseite</a><br>
   <a href="candidates-de.html">Kandidaten zur Integration</a>
